--- a/_notebooks/2023-10-12-Test_Map.ipynb
+++ b/_notebooks/2023-10-12-Test_Map.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Hey will this even work??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<!DOCTYPE html>\n",
     "<html lang=\"en\">\n",
     "<head>\n",
