--- a/_notebooks/2023-10-12-Test_Map.ipynb
+++ b/_notebooks/2023-10-12-Test_Map.ipynb
@@ -47,6 +47,10 @@
     "        left: 56%;\n",
     "\t\tbottom: 42%;\n",
     "\t}\n",
+    "\tbutton:nth-child(4) {\n",
+    "\t\tleft: 30%;\n",
+    "\t\tbottom: 20%;\n",
+    "\t}\n",
     "\n",
     "  h2 {\n",
     "     text-align: center;\n",
@@ -66,6 +70,7 @@
     "   <div class=\"container\">\n",
     "\t\t<div class=\".btn\">\n",
     "\t\t\t<h2> Del Norte Highschool Map </h2>\n",
+    "\t\t\t<button> 4 </button>\n",
     "\t\t\t<button> 2 </button>\n",
     "\t\t\t<button> 3 </button>\n",
     "\t\t\t<button> 1 </button>\n",
