--- a/_notebooks/2023-10-12-Test_Map.ipynb
+++ b/_notebooks/2023-10-12-Test_Map.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!DOCTYPE html>\n",
     "<html lang=\"en\">\n",
     "<head>\n",
     "<meta charset=\"utf-8\">\n",
@@ -77,8 +76,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
