trying something new
It did not work still

--- a/_notebooks/2023-10-16-Vanta_page.ipynb
+++ b/_notebooks/2023-10-16-Vanta_page.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ryan has silly instructions"
+    "---\n",
+    "comments: true\n",
+    "layout: blogs\n",
+    "title: Calculator IPYNB\n",
+    "description: Grab Calculator Code and place in IPYNB\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 2} }\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<script async src=\"{embedSrc}\"></script>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "WHYYY\n"
+    "work?"
    ]
   }
  ],
