--- a/_notebooks/2023-10-16-Vanta_page.ipynb
+++ b/_notebooks/2023-10-16-Vanta_page.ipynb
@@ -7,8 +7,8 @@
     "---\n",
     "comments: true\n",
     "layout: blogs\n",
-    "title: Calculator IPYNB\n",
-    "description: Grab Calculator Code and place in IPYNB\n",
+    "title: Tester\n",
+    "description: Tester did not work\n",
     "type: hacks\n",
     "courses: { compsci: {week: 2} }\n",
     "---"
