something works now
it is not optimized

--- a/_notebooks/2023-10-16-Vanta_page.ipynb
+++ b/_notebooks/2023-10-16-Vanta_page.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "comments: true\n",
-    "layout: blogs\n",
+    "layout: post\n",
     "title: Tester\n",
     "description: Tester did not work\n",
     "type: hacks\n",
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "work?"
+    "<script async src=\"//jsfiddle.net/aktrooper/z0j6Lsqe/embed/\"></script>"
    ]
   }
  ],
