testing more vanta backgrounds

--- a/_notebooks/2023-10-16-Vanta_page.ipynb
+++ b/_notebooks/2023-10-16-Vanta_page.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<script async src=\"//jsfiddle.net/aktrooper/z0j6Lsqe/embed/\"></script>"
+    "<script async src=\"//jsfiddle.net/aktrooper/z0j6Lsqe/embed/\"></script>\n",
+    "<script async src=\"//jsfiddle.net/aktrooper/53w1g2r6/3/embed/\"></script>\n",
+    "\n"
    ]
   }
  ],
