--- a/_notebooks/2023-10-12-Test_Map.ipynb
+++ b/_notebooks/2023-10-12-Test_Map.ipynb
@@ -8,8 +8,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
    "source": [
     "<html lang=\"en\">\n",
     "<head>\n",
@@ -96,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
