--- a/_notebooks/2023-10-13-Test_Map-Ryantriesit.ipynb
+++ b/_notebooks/2023-10-13-Test_Map-Ryantriesit.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ni hao ma i am try this"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -25,8 +32,8 @@
     "    <style>\n",
     "        #game-container {\n",
     "            position: relative;\n",
-    "            width: 240px;\n",
-    "            height: 140px;\n",
+    "            width: 400px;\n",
+    "            height: 300px;\n",
     "        }\n",
     "        #target-image {\n",
     "            position: absolute;\n",
@@ -53,31 +60,6 @@
     "\n",
     "        let score = 0;\n",
     "\n",
-    "        // Function to calculate and update the score\n",
-    "        function updateScore(distance) {\n",
-    "            let earnedPoints = 0;\n",
-    "            if (distance < 50) {\n",
-    "                earnedPoints = 10;\n",
-    "            } else if (distance < 100) {\n",
-    "                earnedPoints = 5;\n",
-    "            } else {\n",
-    "                earnedPoints = 1;\n",
-    "            }\n",
-    "            score += earnedPoints;\n",
-    "            scoreDisplay.textContent = `Score: ${score}`;\n",
-    "            return earnedPoints;\n",
-    "        }\n",
-    "\n",
-    "        // Function to move the target to a random location\n",
-    "        function moveTarget() {\n",
-    "            const maxWidth = gameContainer.clientWidth - targetImage.clientWidth;\n",
-    "            const maxHeight = gameContainer.clientHeight - targetImage.clientHeight;\n",
-    "            const randomX = Math.random() * maxWidth;\n",
-    "            const randomY = Math.random() * maxHeight;\n",
-    "            targetImage.style.left = randomX + \"px\";\n",
-    "            targetImage.style.top = randomY + \"px\";\n",
-    "        }\n",
-    "\n",
     "        gameContainer.addEventListener(\"click\", (event) => {\n",
     "            const centerX = targetImage.width / 2;\n",
     "            const centerY = targetImage.height / 2;\n",
@@ -86,20 +68,22 @@
     "\n",
     "            const distance = Math.sqrt(Math.pow(centerX - clickX, 2) + Math.pow(centerY - clickY, 2));\n",
     "\n",
-    "            const earnedPoints = updateScore(distance);\n",
+    "            // You can adjust the scoring mechanism as needed\n",
+    "            if (distance < 50) {\n",
+    "                score += 10;\n",
+    "            } else if (distance < 100) {\n",
+    "                score += 5;\n",
+    "            } else {\n",
+    "                score += 1;\n",
+    "            }\n",
     "\n",
-    "            // Display a pop-up message with the earned points\n",
-    "            alert(`You gained ${earnedPoints} points!`);\n",
-    "\n",
-    "            // Move the target to a random location\n",
-    "            moveTarget();\n",
+    "            scoreDisplay.textContent = `Score: ${score}`;\n",
     "        });\n",
-    "\n",
-    "        // Initial random placement of the target\n",
-    "        moveTarget();\n",
     "    </script>\n",
     "</body>\n",
-    "</html>\n"
+    "</html>\n",
+    "\n",
+    "<iframe src=\"game.html\" width=\"600\" height=\"600\"></iframe>\n"
    ]
   }
  ],
@@ -119,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
